# OrnamentaRainbow

./: .env_example  .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/forecasting/: dateformat.py  forecasting.py  tomorrow.py  weatherapp.py
src/misc/: evaluate.py
